welcome.lessons.welcome.loopwhile.WhileMoria.scala.code
while (!estSurBiscuit) {
	recule()
};

while (estSurBiscuit) { 
	prendBiscuit();
	porteBiscuit();
}

while (estSurBiscuit() && prendBiscuit() & PorteBiscuit() ) {
	avance()
}
